Added Api key, RAG and its related endpoints and files + updated test,postman,swagger
